# compmath3

./: .gitignore  test.json
back/: Cargo.toml
back/src/: main.rs
back/src/core/: eq_solver.rs  mod.rs  models.rs
back/src/tests/: mod.rs  test_solver.rs
front/: index.html
front/src/: App.css  App.jsx  styles.css
