[package]
name = "compmath1"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.4.2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.12.1"
tower-http = { version = "0.5.1", features = ["full"] }
tokio = { version = "1.36.0", features = ["full"] }
http = "0.2.11"
axum = "0.7.4"

#tonic = "0.4.2"  # Rust gRPC implementation
#prost = "0.7.0" # Rust Protocol Buffers implementation
#prost-types = "0.7.0" # Contains definitions of Protocol Buffers well-known types
